--- a/talks/talks/2025_01-slice_winter-rusty_riscv_and_sampled_simulation.jinja2
+++ b/talks/talks/2025_01-slice_winter-rusty_riscv_and_sampled_simulation.jinja2
@@ -9,8 +9,8 @@
 {# Change ‘venue’ to a conference or workshop name if any #}
 {% set venue = "ATHLETE Update" %}
 {# Publication info (hidden by default) #}
-{% set pub_datetime_iso = "2024-08-12" %}
-{% set pub_date = "August 12, 2024" %}
+{% set pub_datetime_iso = "2025-01-13" %}
+{% set pub_date = "January 13, 2025" %}
 
 {# Custom styles and JS for a particular talk #}
 {% block custom_head %}
@@ -35,8 +35,8 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   <h4 style="font-weight: normal; font-size: 0.9rem;">An Experimental ISS + Baremetal Environment + Benchmark Construction Methodology</h4>
   <p style="font-weight: normal; font-size: 0.8rem;">Safin Singh, Ansh Maroo, Connor Chang, Pramath Krishna, Vighnesh Iyer, Joonho Whangbo</p>
 
-  <h4 style="font-weight: normal;">SLICE Winter Retreat 2025<br />
-  Monday, December 9th, 2024</h4>
+  <h4 style="font-weight: normal;">SLICE Winter Retreat<br />
+  Monday, January 13th, 2025</h4>
 </section>
 
 <section>
