--- a/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
+++ b/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
@@ -43,28 +43,40 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   </section>
 
   <section>
-    <h2 style="margin: 0">Natural Systems</h2>
+    <h2 style="margin: 0">Natural Systems in General</h2>
 
     <div class="container" style="grid-template-columns: 1fr 1fr;">
       <div><img class="image" width="80%" src="./figs/natural_vs_engineered_systems/natural_systems.svg" /></div>
       <div>
         <ul>
           <li class="fragment">A natural system is defined by a set of axioms</li>
-          <li class="fragment">We can't know them, but we can build approximate models for them</li>
-          <li class="fragment">Or if we assume we some of them precisely, they will be incomplete</li>
-          <li class="fragment">A natural system produces truth</li>
+          <li class="fragment">The nature of natural axioms
+            <ul>
+              <li>If we can't know them, we can build approximate models for them</li>
+              <li>If we assume them precisely, they will be incomplete</li>
+            </ul>
+          </li>
+          <li class="fragment">A natural system produces "observations"
+            <ul>
+              <li>"Truth" and "facts" are inherent in a natural system</li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
   </section>
 
   <section>
-    <h2 style="margin: 0">Natural Systems</h2>
+    <h2 style="margin: 0">Natural Systems - Examples</h2>
 
     <div class="container" style="grid-template-columns: 1fr 1fr;">
       <div><img class="image" width="80%" src="./figs/natural_vs_engineered_systems/natural_systems.svg" /></div>
       <div>
         <ul>
+          <li class="fragment">There are few <em>primordial</em> examples of natural systems</li>
+          <!-- https://chatgpt.com/share/680ea232-9694-8004-8912-78384d019c18 -->
+        </ul>
+        <ol>
           <li class="fragment">Our physical world</li>
           <li class="fragment">Concepts in pure mathematics
             <ul>
@@ -74,12 +86,15 @@ import 'highlight.js/styles/tokyo-night-dark.css'
               <li>Lambda calculus</li>
             </ul>
           </li>
-        </ul>
+        </ol>
       </div>
     </div>
 
   </section>
 </section>
 
+
+<!-- In principle, ML for placement would be way better wrt runtime and QoR vs algorithmic / manual heuristic techniques -->
+<!-- The major caveat to the bitter lesson. -->
 
 {% endblock %}
