--- a/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
+++ b/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
@@ -40,6 +40,11 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   <section class="center">
     <h2>Natural vs Engineered Systems</h2>
     <p>My attempt at understanding the difference between <em>science</em> and <em>engineering</em> and how their worlds are bridged.</p>
+    <p class="fragment"><strong>Why?</strong></p>
+    <ol class="fragment">
+      <li>Helps us understand what precisely is engineering research</li>
+      <li>Gives us insights as to when ML is powerful and when its value is dubious</li>
+    </ol>
   </section>
 
   <section>
@@ -73,23 +78,68 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <div><img class="image" width="80%" src="./figs/natural_vs_engineered_systems/natural_systems.svg" /></div>
       <div>
         <ul>
-          <li class="fragment">There are few <em>primordial</em> examples of natural systems</li>
+          <li class="fragment">There are only two examples of <em>primordial</em> natural systems</li>
           <!-- https://chatgpt.com/share/680ea232-9694-8004-8912-78384d019c18 -->
         </ul>
         <ol>
           <li class="fragment">Our physical world</li>
           <li class="fragment">Concepts in pure mathematics
-            <ul>
-              <li>Number theory</li>
-              <li>First-order logic, proof theory</li>
-              <li>Peano arithmetic</li>
-              <li>Lambda calculus</li>
+            <ul class="small">
+              <li>Number theory (e.g. Peano arithmetic)</li>
+              <li>Computation (e.g. Lambda calculus)</li>
+              <li>Formal logic (e.g. First-order logic)</li>
+              <li>Proof theory (e.g. Martin-Löf type theory)</li>
+              <li>Set theory (e.g. ZFC)</li>
             </ul>
           </li>
         </ol>
+        <p class="fragment smallish center">The <em>pure</em> study of natural systems is <em>theoretical</em> math / logic / physics / metaphysics / philosophy</p>
       </div>
     </div>
+  </section>
 
+  <section>
+    <h2>Understanding Natural Systems</h2>
+    <!--
+    can't you tell I'm trying to unify physical science and abstract math, even though they don't really seem to fit together?
+    - Oh, this is just the scientific method? Yes, obviously.
+    - Godel's incompleteness theorem
+      - Can't know everything from first principles
+    - Heisenburg's uncertainty principle
+      - Only can get approximate models, not the truth itself
+    - Failure to explain various natural phenomena (see unanswered questions in physics)
+    -->
+    <div class="container" style="grid-template-columns: 1fr 1fr;">
+      <div><img class="image" width="100%" src="./figs/natural_vs_engineered_systems/understanding_natural_systems.svg" /></div>
+      <div>
+        <ul>
+          <li class="fragment">Can we ever fully comprehend a natural system?
+            <ul><li><strong>No</strong>: Gödel's incompleteness theorems</li></ul>
+          </li>
+          <li class="fragment">Can we perfectly simulate a natural system?
+            <ul><li><strong>No</strong>: Uncertainty principle</li></ul>
+          </li>
+          <li class="fragment">Do we fully understand the physical natural system?
+            <ul><li><strong>No</strong>: <a href="https://en.wikipedia.org/wiki/Cosmological_constant_problem#Cosmological_constant_problem">Cosmological constant problem</a></li></ul>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Engineered Systems</h2>
+  </section>
+
+  <section>
+    <h2>The Missing Middle</h2>
+
+    What is biology?
+  </section>
+
+  <section>
+    <h2>Evolved Systems</h2>
   </section>
 </section>
 
